# email-generator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py
app/routers/: __init__.py  health.py
app/schemas/: email.py
app/services/: __init__.py  llm.py
